--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "^3.1.8",
+    "@types/jssha": "0.0.29",
     "typescript": "2.4.2"
   },
-  "description": "An Ionic project"
+  "description": "Manage your rental units effectively"
 }
