--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
     "@angular/http": "5.0.3",
     "@angular/platform-browser": "5.0.3",
     "@angular/platform-browser-dynamic": "5.0.3",
+    "@ionic-native/bluetooth-serial": "^4.5.3",
     "@ionic-native/core": "4.4.0",
+    "@ionic-native/device": "^4.5.3",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "2.1.3",
+    "cordova-plugin-bluetooth-serial": "^0.4.7",
+    "cordova-plugin-device": "^2.0.1",
     "cordova-plugin-ionic": "^4.0.0",
     "crypto-js": "^3.1.9-1",
     "ionic-angular": "3.9.2",
@@ -45,7 +49,9 @@
         "APP_ID": "6d573601",
         "CHANNEL_NAME": "Master",
         "UPDATE_METHOD": "background"
-      }
+      },
+      "cordova-plugin-device": {},
+      "cordova-plugin-bluetooth-serial": {}
     }
   }
 }
