--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@angular/http": "5.0.3",
         "@angular/platform-browser": "5.0.3",
         "@angular/platform-browser-dynamic": "5.0.3",
+        "@ionic-native/app-version": "^4.5.3",
         "@ionic-native/bluetooth-serial": "^4.5.3",
         "@ionic-native/core": "4.4.0",
         "@ionic-native/device": "^4.5.3",
