--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "crypto-js": "^3.1.9-1",
         "ionic-angular": "3.9.2",
         "ionicons": "3.0.0",
+        "platform": "1.3.5",
         "prod": "^1.0.1",
         "rxjs": "5.5.2",
         "sw-toolbox": "3.6.0",
